--- a/src/components/layout/footer/Footer.module.css
+++ b/src/components/layout/footer/Footer.module.css
@@ -40,3 +40,82 @@
         justify-content: space-between;
     }
 }
+
+.aboutUs,
+.contactUs {
+    /* background: rgba(255, 255, 255, 0.1); */
+    padding: 15px;
+    /* border-radius: 8px; */
+    text-align: left;
+    /* box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); */
+}
+
+.aboutUs h2,
+.contactUs h2 {
+    font-size: 22px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #6c6a69; /* Mediterranean theme color */
+}
+
+.aboutUs p,
+.contactUs p {
+    font-size: 16px;
+    line-height: 1.5;
+    color: #000000;
+}
+
+.contactUs address p {
+    margin: 5px 0;
+    font-size: 15px;
+    color: #000000;
+}
+
+.contactUs a {
+    text-decoration: none;
+    font-weight: bold;
+    color: #e76f51;
+    transition: color 0.3s ease-in-out;
+}
+
+.contactUs a:hover {
+    color: #f4a261;
+}
+
+.socialIcons {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.instagramWrapper {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 50px;
+    height: 50px;
+}
+
+.instagramIcon {
+    font-size: 45px;
+    position: relative;
+    z-index: 2;
+}
+
+.instagramWrapper::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(45deg, #feda75, #fa7e1e, #d62976, #962fbf, #4f5bd5);
+    border-radius: 50%;
+    z-index: 1;
+    transition: transform 0.3s ease-in-out;
+}
+
+.instagramWrapper:hover::before {
+    transform: scale(1.2);
+}
